# burl

./: CMakeLists.txt
.github/workflows/: ci.yml
doc/: notes.md
example/: CMakeLists.txt  usage.cpp
example/burl/: CMakeLists.txt  main.cpp
include/boost/burl/: auth.hpp  body_tags.hpp  cookies.hpp  error.hpp  fwd.hpp  options.hpp  parse_args.hpp  response.hpp  session.hpp
reference/: curl-usage-http.md  curl-usage.md  curl.md  curl.txt
src/: auth.cpp  cookies.cpp  parse_args.cpp  session.cpp
test/: CMakeLists.txt  auth.cpp  cookies.cpp  error.cpp  options.cpp  parse_args.cpp  response.cpp  session.cpp
