#
# Copyright (c) 2025 Vinnie Falco (vinnie.falco@gmail.com)
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
# Official repository: https://github.com/cppalliance/burl
#

add_executable(burl_example_usage usage.cpp)
target_link_libraries(burl_example_usage PRIVATE Boost::burl)

add_subdirectory(burl)
